# weather-rust

./: .env  Cargo.toml  README.md
src/: color_emojis.rs  lib.rs  main.rs  strings.rs
src/commands/: help.rs  invalid.rs  mod.rs  version.rs
src/types/: aqi.rs  mod.rs  weather.rs
